# load-rift

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: release-notes.md
docs/investigations/: k6-temp-script-missing-2026-05-20.md
docs/releases/: v0.2.0.md  v0.2.1.md  v0.2.10.md  v0.2.11.md  v0.2.12.md  v0.2.13.md  v0.2.14.md  v0.2.15.md  v0.2.16.md  v0.2.17.md  v0.2.18.md  v0.2.19.md  v0.2.2.md  v0.2.20.md  v0.2.21.md  v0.2.22.md  v0.2.23.md  v0.2.24.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.2.8.md  v0.2.9.md
licenses/: AGPL-3.0.txt
scripts/: build_apt_repository.py  install-apt-repo.sh  install-k6.sh
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/appstream/: dev.loadrift.desktop.metainfo.xml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  models.rs  state.rs  test_support.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/commands/collection/: mod.rs  service.rs  tests.rs
src-tauri/src/commands/testing/: logic.rs  mod.rs  smoke.rs  tests.rs
src-tauri/src/importing/: mod.rs  parser.rs  runtime.rs  script.rs  script_tests.rs  tests.rs
src-tauri/src/k6/: mod.rs  process.rs  report.rs  summary.rs  summary_format.rs  tests.rs
src-tauri/src/k6/process/: artifacts.rs  binary_resolution.rs  cleanup.rs  completion.rs  diagnostics.rs  launch.rs  live_metrics.rs  output_forwarding.rs  runtime.rs  state.rs
src/app/: App.accessibility.test.tsx  App.collection-summary.test.tsx  App.persistence.test.tsx  App.tsx  App.validation.test.tsx  advancedOptions.ts  persistence.test.ts  persistence.ts  types.ts  utils.ts  workflow.ts
src/app/components/: AdvancedOptionsCard.tsx  AppHero.tsx  CollectionImportSection.tsx  CollectionSummaryCard.tsx  ConfigurePanel.tsx  LatestResultCard.tsx  LiveRunMonitorCard.tsx  RunPanel.tsx  RunnerSettingsCard.tsx  RuntimeVariablesCard.tsx  SettingsCardHeader.tsx  SmokeTestCard.tsx  SourcePanel.tsx  TestHarnessConfigurePanel.tsx  TestHarnessRunPanel.tsx  TestHarnessSection.tsx  TestHarnessSection.types.ts  WorkflowStepper.tsx
src/app/hooks/: useCurlImport.ts  useRunnerOptions.ts  useWorkspaceLayout.ts
src/benchmarks/: largeCollection.bench.ts
src/lib/: curl.test.ts  curl.ts
src/styles/: app.css
src/test/: largeCollectionFixtures.ts  loadRiftApiTestUtils.tsx  setup.ts
tests/e2e/: workflow-smoke.spec.ts
(+26 files in other folders)
