[package]
name = "loadrift"
version = "0.1.0"
description = "Load Rift Tauri foundation"
authors = ["Douwe de Vries"]
license = "MIT"
repository = "https://github.com/ddv1982/load-rift"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "loadrift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
hdrhistogram = "7.5.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
uuid = { version = "1.22.0", features = ["v4", "v5"] }
