[package]
name = "loadrift"
version = "0.2.2"
description = "Load Rift Tauri foundation"
authors = ["Douwe de Vries"]
license = "MIT"
repository = "https://github.com/ddv1982/load-rift"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "loadrift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
hdrhistogram = "7.5.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
uuid = { version = "1.22.0", features = ["v4", "v5"] }
