[package]
name = "loadrift"
version = "0.2.23"
description = "Load Rift Tauri foundation"
authors = ["Douwe de Vries"]
license = "MIT"
repository = "https://github.com/ddv1982/load-rift"
edition = "2021"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "loadrift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
hdrhistogram = "7.5.4"
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "rustls"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2.8.0"
uuid = { version = "1.23.1", features = ["v4", "v5"] }
tempfile = "3.27.0"
